--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -7,5 +7,6 @@ repositories{
 dependencies{
     compile 'org.testng:testng:6.9.10'
     compile 'junit:junit:4.12'
-    compile 'org.seleniumhq.selenium:selenium-java:2.50.0'
+    compile 'org.seleniumhq.selenium:selenium-java:2.52.0'
+    compile 'org.hamcrest:java-hamcrest:2.0.0.0'
 }
