--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -6,8 +6,8 @@ repositories{
 
 dependencies{
     compile 'org.testng:testng:6.9.10'
-    compile 'junit:junit:4.12'
     compile 'org.seleniumhq.selenium:selenium-java:2.52.0'
     compile 'org.hamcrest:java-hamcrest:2.0.0.0'
     compile 'com.beust:jcommander:1.48'
+    compile 'com.thoughtworks.xstream:xstream-distribution:1.4.9'
 }
