--- a/mantis-tests/src/test/resources/local.properties
+++ b/mantis-tests/src/test/resources/local.properties
@@ -1,4 +1,5 @@
 web.baseUrl = http://localhost:8080/mantisbt-1.2.19/
+web.mantisConnectURL = http://localhost:8080/mantisbt-1.2.19/api/soap/mantisconnect.php
 web.adminLogin = administrator
 web.adminPassword = root
 
