--- a/sandbox/build.gradle
+++ b/sandbox/build.gradle
@@ -10,3 +10,7 @@ dependencies{
     compile 'junit:junit:4.12'
     compile 'org.seleniumhq.selenium:selenium-java:2.50.0'
 }
+
+test {
+	useTestNG()
+}
